--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hiking Fun!</title>
   </head>
-  <body>
+  <body class="is-preload">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
