--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <!-- <link rel="stylesheet" href="public/assets/css/main.css" /> -->
+    <!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hiking Fun!</title>
   </head>
